--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,13 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<h2 class="text-gray">
+  Hello there!
+</h2>
+
+<br><br>
 
 {{outlet}}
+
+<br><br>
+
+<p>
+  https://tailwindcss.com/docs/installation/
+</p>
