Added results page with needed redirects

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
-<h2 class="text-gray">
-  Hello there!
-</h2>
+<p>
+  {{link-to 'Homepage' 'application'}}
+</p>
 
 <p>
   {{link-to 'Take the quiz!' 'quiz'}}
