--- a/app/templates/quiz/question.hbs
+++ b/app/templates/quiz/question.hbs
@@ -1,4 +1,8 @@
 <p>
+  {{quiz.completed}}
+</p>
+
+<p>
   {{#each all_questions as |question|}}
     {{#if question.available}}
       {{link-to question.index 'quiz.question' question.index activeClass="font-bold"}}
