Added property to randomize answer orders

--- a/app/templates/quiz/question.hbs
+++ b/app/templates/quiz/question.hbs
@@ -17,7 +17,7 @@
 <hr>
 
 <ul>
-  {{#each model.answers as |answer|}}
+  {{#each answers as |answer|}}
     <li {{action 'selectAnswer' model.index answer.value}}>
       {{answer.text}} ({{answer.value}})
     </li>
