--- a/app/templates/results/pokemon.hbs
+++ b/app/templates/results/pokemon.hbs
@@ -2,6 +2,8 @@
   {{model.name}}
 </h3>
 
-<p>
+<img src="/assets/images/{{model.name}}.png" alt="Picture of {{model.name}}">
+
+<p class="text-gray">
   {{model.description}}
 </p>
