--- a/app/styles/_settings/_typography.scss
+++ b/app/styles/_settings/_typography.scss
@@ -11,12 +11,12 @@
 }
 
 // Modular Scale variables
-$g-modular-scale--base: spacing();
+$g-modular-scale--base: rem(18px);
 $g-modular-scale--ratio: 1.25; // Major third
 
 
 // Font families
-$g-font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+$g-font-family-base: 'Ariel', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 $g-font-family-header: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 $g-font-family-mono: "Bitstream Vera Sans Mono", "Consolas", "Courier", monospace;
 
@@ -53,7 +53,7 @@ $typography-map: (
     h4: decimal-round(modular-scale(1), 2),
     h5: decimal-round(modular-scale(1), 2),
     h6: decimal-round(modular-scale(1), 2),
-    p: decimal-round(modular-scale(2), 2),
+    p: decimal-round(modular-scale(1), 2),
     small: decimal-round(modular-scale(2), 2),
     tiny: decimal-round(modular-scale(2), 2)
   ),
