Add wrapper classes and styling

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -14,3 +14,7 @@
 @import "_generic/body";
 @import "_generic/img";
 @import "_generic/typography";
+
+@import "_components/wrapper";
+@import "_components/nav";
+@import "_components/footer";
