Add basic profile layout

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -16,6 +16,7 @@
 @import "_generic/typography";
 
 @import "_components/wrapper";
+@import "_components/profile";
 @import "_components/nav";
 @import "_components/footer";
 @import "_components/results";
