Add progress-bar component

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,6 +17,7 @@
 
 @import "_components/wrapper";
 @import "_components/profile";
+@import "_components/progress-bar";
 @import "_components/nav";
 @import "_components/footer";
 @import "_components/results";
