Update action colors

--- a/app/styles/_settings/_colors.scss
+++ b/app/styles/_settings/_colors.scss
@@ -18,13 +18,13 @@ $color-map: (
   ),
 
   action: (
-    darkest: #3B0D0C,
-    darker: #621B18,
-    dark: #CC1F1A,
-    base: #E3342F,
-    light: #EF5753,
-    lighter: #F9ACAA,
-    lightest: #FCEBEA
+    darkest: #0d1040,
+    darker: #151b6b,
+    dark: #1d2695,
+    base: #2631c0,
+    light: #3f4bd9,
+    lighter: #bfc3f2,
+    lightest: #eaebfb
   ),
 
   mono: (
