Style quiz breadcrumbs

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -22,3 +22,4 @@
 @import "_components/footer";
 @import "_components/results";
 @import "_components/questions";
+@import "_components/breadcrumbs";
