--- a/app/styles/_components/_questions.scss
+++ b/app/styles/_components/_questions.scss
@@ -1,13 +1,9 @@
-.eq-questions__title {
-  text-align: center;
-}
-
 .eq-questions__list {
-  display: flex;
+  display: grid;
   padding: 0;
-  margin: spacing(oneHalf) 0;
-  flex-wrap: wrap;
-  justify-content: center;
+  margin: 5vw 0;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr) );
+  grid-gap: spacing();
 
   list-style-type: none;
 }
