--- a/app/styles/_components/_results.scss
+++ b/app/styles/_components/_results.scss
@@ -1,15 +1,21 @@
 .eq-results {
-  margin: 0;
-  padding: spacing();
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr) );
-  list-style-type: none;
+  padding: spacing() 0;
+  margin: 0;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr) );
   grid-gap: spacing();
+
+  list-style-type: none;
+}
+
+.eq-results__title {
+  font-size: type(font-size, h3);
 }
 
 .eq-results__item {
   display: flex;
   padding: spacing();
+  height: 100%;
   flex-direction: column;
   align-items: center;
 
@@ -18,6 +24,7 @@
 
   @include larger-than(md) {
     padding: spacing(double);
+    height: 100%;
   }
 }
 
@@ -29,4 +36,6 @@
 
 .eq-results__label {
   margin: auto 0 0;
+
+  text-transform: capitalize;
 }
