--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -23,3 +23,4 @@
 @import "_components/results";
 @import "_components/questions";
 @import "_components/breadcrumbs";
+@import "_components/sprites";
