--- a/app/templates/components/poke-sprites.hbs
+++ b/app/templates/components/poke-sprites.hbs
@@ -1,9 +1,11 @@
-<ul>
-  <li>
+<ul class="eq-sprites">
+  <li class="eq-sprites__item">
     <img src="{{normal}}" alt="{{name}}'s default sprite.">
+    Normal
   </li>
 
-  <li>
+  <li class="eq-sprites__item">
     <img src="{{shiny}}" alt="{{name}}'s shiny sprite.'">
+    Shiny
   </li>
 </ul>
