Add titleize helper

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -24,3 +24,4 @@
 @import "_components/questions";
 @import "_components/breadcrumbs";
 @import "_components/sprites";
+@import "_components/titleize";
