Stylize poke-types components

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -24,4 +24,5 @@
 @import "_components/questions";
 @import "_components/breadcrumbs";
 @import "_components/sprites";
+@import "_components/types";
 @import "_components/titleize";
