--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,15 @@
-<img src="/assets/images/eeveelutions.png" alt="All the different eeveelutions gathered together.">
+<div class="eq-homepage">
+  <h1>
+    Take the Eevee Evolution Quiz!
+  </h1>
+
+  <p>
+    Anyone whose anyone whose a Pokemon fan has obsessed over which Eevee evolution is right for them and their team. This quiz helps make that easier by, through the advanced science of asking basic questions, let you know which one best matches your personality!
+  </p>
+
+  <p>
+    Like all personality tests such as the Myers-Briggs, this uses no actual science and merely pretends to be a reliable way of learning more about yourself. But it's still fun, so please {{#link-to 'quiz'}}give this personality quiz a try!{{/link-to}}
+  </p>
+
+  <img class="eq-homepage__image" src="/assets/images/eeveelutions.png" alt="All the different eeveelutions gathered together.">
+</div>
