--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -26,6 +26,8 @@
   </main>
 
   <footer class="eq-wrapper__footer eq-footer">
-    Find me on Github!
+    <a target="_blank" rel="noopener" href="https://github.com/maxx1128/eeveelution-quiz">
+      View the quiz's code on Github!
+    </a>
   </footer>
 </div>
