--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -27,7 +27,7 @@
 
   <footer class="eq-wrapper__footer eq-footer">
     <a target="_blank" rel="noopener" href="https://github.com/maxx1128/eeveelution-quiz">
-      View the quiz's code on Github!
+      View the quiz's code on Github
     </a>
   </footer>
 </div>
