Upgrade quiz question header test

--- a/app/templates/components/quiz-question.hbs
+++ b/app/templates/components/quiz-question.hbs
@@ -1,5 +1,5 @@
-<h3 data-test="QuestionItem">
-  {{question.index}}. {{question.text}}
+<h3>
+  {{question.index}}. <span data-test="QuestionItemHeader">{{question.text}}</span>
 </h3>
 
 <ul class="eq-questions__list" data-test="AnswerList">
